test/fail/classes/invalid_class_decl_location.lly
#[
SyntaxError: Cannot define a class here.
    from invalid_class_decl_location.lly:7
]#

if 1: {
    class abc() {
    }
}
